# PoolGame

./: CMakeLists.txt  CMakePresets.json  README.md
src/: Application.c  Application.h  Ball.c  Ball.h  ChargeBar.c  ChargeBar.h  Cue.c  Cue.h  GameContext.c  GameContext.h  Logger.c  Logger.h  Table.c  Table.h  Utils.h  main.c
src/entrypoint/: main.c
